--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
-  <string name="app_name">CarNav Relay BT</string>
+  <string name="app_name">PHANToM GO</string>
+  <string name="app_name_main">PHANToM GO - เครื่องหลัก</string>
+  <string name="app_name_display">PHANToM GO - จอติดรถ</string>
+  <string name="select_mode">เลือกโหมดการใช้งาน</string>
+  <string name="mode_main">เครื่องหลัก (ส่งตำแหน่ง)</string>
+  <string name="mode_display">จอติดรถ (แสดงผล)</string>
+  <string name="paired_devices">อุปกรณ์ที่จับคู่ไว้</string>
+  <string name="no_paired_devices">ยังไม่มีอุปกรณ์ที่จับคู่\n\nกรุณาไปจับคู่ Bluetooth ใน Settings ก่อน</string>
+  <string name="enter_code">ใส่รหัสจับคู่</string>
+  <string name="enter_code_hint">รหัส 6 หลักจากจอติดรถ</string>
+  <string name="connect">เชื่อมต่อ</string>
+  <string name="cancel">ยกเลิก</string>
+  <string name="ok">ตกลง</string>
+  <string name="display_title">โหมดจอติดรถ</string>
+  <string name="display_code_label">รหัสจับคู่</string>
+  <string name="display_code_hint">เอารหัสนี้ไปใส่ในเครื่องหลัก</string>
+  <string name="keep_screen_on">หน้าจอจะค้างไว้ตลอด</string>
+  <string name="waiting_connection">รอการเชื่อมต่อ...</string>
+  <string name="bt_permission_title">ต้องการสิทธิ์ Bluetooth</string>
+  <string name="bt_permission_message">แอปต้องใช้สิทธิ์ Bluetooth เพื่อเชื่อมต่อกันระหว่างเครื่อง</string>
+  <string name="main_connected">เชื่อมต่อแล้ว พร้อมส่งตำแหน่ง</string>
+  <string name="main_connecting">กำลังเชื่อมต่อ...</string>
+  <string name="channel_main_name">PHANToM GO - เครื่องหลัก</string>
+  <string name="channel_display_name">PHANToM GO - จอติดรถ</string>
+  <string name="notification_connected">เชื่อมต่ออยู่</string>
 </resources>
